--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,6 +6,6 @@
     color: #ffffff;
     margin: 0 auto;
     padding-top: 34px;
+    padding-bottom: 24px;
     background-color: #2A2C2F;
-    ;
 }
