--- a/blocks/header/__nav-link/header__nav-link.css
+++ b/blocks/header/__nav-link/header__nav-link.css
@@ -1,9 +1,10 @@
-.header__lang-link {
+.header__nav-link {
     font-size: 24px;
     line-height: 1.2;
     font-weight: normal;
-    margin: 12px 0 4px 18px;
     text-decoration: none;
+    padding: 0;
+    margin: 12px 0 4px 18px;
     color: #ffffff;
 }
 
