--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,9 +1,7 @@
 .intro__list {
     list-style-type: none;
     font-size: 12px;
-    line-height: 1.5;
-    text-align: left;
-    margin: 33px 0 0;
+    line-height: 18px;
+    margin: 32px 0 0;
     padding: 0;
-    width: 100%;
 }
