--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle{
-    width: calc(100% - 864px);
+    max-width: 320px;
     font-size: 18;
     font-weight: normal;
     line-height: 1.2;
