--- a/blocks/header/__nav-link/header__nav-link.css
+++ b/blocks/header/__nav-link/header__nav-link.css
@@ -4,10 +4,17 @@
     font-weight: normal;
     text-decoration: none;
     padding: 0;
-    margin: 12px 0 4px 18px;
+    margin: 0 0 0 18px;
     color: #ffffff;
 }
 
-.header__lang-link:active {
+.header__nav-link:active {
     text-decoration: underline;
+}
+
+@media screen and (max-width: 540px){
+    .header__nav-link{
+        font-size: 18px;
+        line-height: 1.11;
+    }
 }
