--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,11 +1,4 @@
 .page {
-    min-width: 1280px;
-    font-family: 'Inter', sans-serif;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    color: #ffffff;
-    margin: 0 auto;
-    padding-top: 34px;
-    padding-bottom: 24px;
     background-color: #2A2C2F;
+    margin: 0;
 }
