--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -2,3 +2,20 @@
     text-decoration: none;
     color: #ffffff;
 }
+
+.cover__link::after{
+    content: "";
+    background: black;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.3;
+    transition: ease-in-out 0.5s;
+    z-index: -1;
+  }
+  
+  .cover__link:hover::after {
+    opacity: 0.8;
+  }
