--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,8 +1,8 @@
 .photo-grid {
-    width: 92.5%;
+    width: 100%;
     display: grid;
-    grid-template-columns: repeat(4, 24%) ;
-    grid-template-rows: repeat(3, 31.74%);
+    grid-template-columns: repeat(4, 1fr) ;
+    grid-template-rows: repeat(3, 1fr);
     grid-gap: 16px 16px;
     margin: 92px auto 0;
 }
