--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,6 +2,13 @@
     list-style-type: none;
     font-size: 12px;
     line-height: 18px;
-    margin: 32px 0 0;
+    margin: 33px 0 0;
     padding: 0;
 }
+
+ 
+@media screen and (max-width: 540px){
+    .intro__list {
+        margin: 34px 0 0;;
+     }
+ }
