--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,3 +6,27 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media screen and (max-width: 1148px){
+    .lead {
+      min-width: calc( 100% - 96px);
+      min-height: 962px;
+      margin: 50px auto 92px;
+    }   
+ }
+ 
+@media screen and (max-width: 860px){
+    .lead {
+        min-width: 100%;
+        min-height: 862px;
+        margin: 50px auto 88px;
+     }
+ }
+ 
+@media screen and (max-width: 540px){
+    .lead {
+        min-width: 100%;
+        min-height: 406px;
+        margin: 50px auto 64px;
+     }
+ }
