--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,3 +7,12 @@
     margin: 0 auto;
     padding: 0;
 }
+
+ 
+@media screen and (max-width: 540px){
+    .cover__subtitle {
+         max-width: calc(100% - 32px);
+         font-size: 14px;
+         line-height: 1.14;
+    }
+}
