--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,3 +7,24 @@
     margin: 283px auto 32px;
     padding: 0;
 }
+
+@media screen and (max-width: 1148px){
+    .cover__title {
+        margin: 233px auto 32px;
+    }   
+ }
+ 
+@media screen and (max-width: 860px){
+    .cover__title {
+        margin: 153px auto 32px;
+    }
+}
+ 
+@media screen and (max-width: 540px){
+    .cover__title {
+         min-width: calc(100% - 32px);
+         font-size: 32px;
+         line-height: 1.09;
+         margin: 51px auto 16px;
+    }
+}
