--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -11,3 +11,21 @@
     z-index: 0;
     position: relative;
 }
+
+@media screen and (max-width: 1148px){
+    .cover {
+         min-height: 640px;
+    }   
+ }
+ 
+ @media screen and (max-width: 860px){
+     .cover {
+         min-height: 480px;
+     }
+ }
+ 
+ @media screen and (max-width: 540px){
+     .cover{
+         min-height: 200px;
+     }
+ }
