--- a/blocks/footer/__copyrights/footer__copyrights.css
+++ b/blocks/footer/__copyrights/footer__copyrights.css
@@ -1,11 +1,17 @@
 .footer__copyrights{
-    margin: 0;
+    margin: 2px 0 0;
     padding: 0;
-    position: absolute;
-    right: 0;
-    bottom: 0;
     font-size: 14px;
     line-height: 1.14;
     font-weight: normal;
     text-align: end;
+}
+
+@media screen and (max-width: 540px){
+    .footer__copyrights {
+        line-height: 1;
+        margin-top: 16px;
+        width: 100%;
+        text-align: left;
+    }
 }
