--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,11 +1,11 @@
 .header__logo  {
-    max-width: 190px;
+    min-width: 190px;
     min-height: 44px;
 }
 
 @media screen and (max-width: 860px){
     .header__logo{
-        max-width: 156px;
+        min-width: 156px;
         min-height: 36px;
     }
 }
