--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,18 +9,18 @@
 
 @media screen and (max-width: 1148px){
     .header{
-        max-width: 90.625%;
+        min-width: 90.625%;
     }
 }
 
 @media screen and (max-width: 860px){
     .header{
-        max-width: calc(100% - 48px);
+        min-width: calc(100% - 48px);
     }
 }
 
 @media screen and (max-width: 540px){
     .header{
-        max-width: calc(100% - 32px);
+        min-width: calc(100% - 32px);
     }
 }
