--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -7,3 +7,11 @@
     margin: 0;
     padding: 0;
 }
+
+ 
+ @media screen and (max-width: 540px){
+    .intro__title {
+        font-size: 32px;
+        line-height: 1.09;
+     }
+ }
