--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,29 @@
 .intro {
-    width: 58.27%;
-    margin-left: 11.56%;
+    max-width: 58.27%;
+    margin-left: 12.5%;
     display: flex;
     flex-direction: column;
     align-content: flex-start;
+    position: relative;
 }
+
+@media screen and (max-width: 1148px){
+    .intro {
+      margin-left: 48px;
+      max-width: 67.382%;
+    }   
+ }
+ 
+@media screen and (max-width: 860px){
+    .intro {
+        min-width: calc(100% - 24px);
+        margin-left: 12px;
+     }
+ }
+ 
+@media screen and (max-width: 540px){
+    .intro {
+        min-width: calc(100% - 32px);
+        margin-left: 16px;
+     }
+ }
