--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -2,3 +2,9 @@
     width: 100%;
     grid-area: image;
 }
+
+@media screen and (max-width: 540px){
+    .place__image {
+        margin: 30px auto 32px;
+    }
+}
