--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -6,3 +6,20 @@
     margin: 0;
     padding: 0;
 }
+ 
+@media screen and (max-width: 860px){
+    .place__title {
+        font-size: 42px;
+        line-height: 1.09;
+    }
+}
+ 
+@media screen and (max-width: 540px){
+    .place__title {
+        font-size: 32px;
+        line-height: 1.09;
+        min-height: 35px;
+        max-width: 288px;
+        margin: 0 0 30px;
+    }
+}
