--- a/blocks/place/__url-heading/palce__url-heading.css
+++ b/blocks/place/__url-heading/palce__url-heading.css
@@ -7,3 +7,11 @@
     margin: 0 0 12px;
     padding: 0;
 }
+
+
+@media screen and (max-width: 860px){
+    .palce__url-heading {
+        line-height: 1;
+    }
+}
+ 
