--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -5,3 +5,9 @@
     justify-content: flex-end;
     
 }
+
+@media screen and (max-width: 540px){
+    .place__website {
+        margin-bottom: 30px;
+    }
+}
