--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,13 +1,32 @@
 .place {
     width: 100%;
     display: grid;
-    grid-template-columns: 46.74% 49.18%;
-    grid-template-rows: repeat(4, 1f1);
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(2, auto);
     grid-template-areas:
         "title website"
-        "image text"
-        "image text"
         "image text";
     grid-gap: 48px 40px;
     margin: 0 auto 80px;
+}
+
+@media screen and (max-width: 1148px){
+    .place {
+      grid-gap: 48px 32px;
+    }   
+}
+
+@media screen and (max-width: 860px){
+    .place {
+        margin: 0 auto 72px;
+        grid-gap: 48px 28px;
+    }
+}
+ 
+@media screen and (max-width: 540px){
+    .place {
+        margin: 0 auto 48px;
+        display: flex;
+        flex-direction: column;
+    }
 }
