--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,4 +3,25 @@
     flex-direction: column;
     max-width: 83.10%;
     margin: 92px auto 0;
+    position: relative;
+}
+
+@media screen and (max-width: 1148px){
+    .places {
+      max-width: calc( 100% - 96px);
+    }   
+}
+ 
+@media screen and (max-width: 860px){
+    .places {
+        max-width: calc(100% - 48px);
+        margin: 88px auto 0;
+    }
+}
+ 
+@media screen and (max-width: 540px){
+    .places {
+        width: 100%;
+        margin: 64px auto 0;
+    }
 }
