--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     margin: 92px auto 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 1148px){
