--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -5,6 +5,6 @@
 
 @media screen and (max-width: 540px){
     .place__image {
-        margin: 30px auto 32px;
+        margin: 0 auto 32px;
     }
 }
