--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -5,7 +5,7 @@
 
 .cover__link::after{
     content: "";
-    background: black;
+    background: #2A2C2F;
     width: 100%;
     height: 100%;
     position: absolute;
