--- a/blocks/intro/__paragraph/intro__paragraph.css
+++ b/blocks/intro/__paragraph/intro__paragraph.css
@@ -1,8 +1,27 @@
 .intro__paragraph {
-    width: 100%;
+    width: 70.12%;
     font-size: 16px;
     font-weight: normal;
     line-height: 1.63;
     text-align: left;
     margin: 32px 0 0;
+}
+
+
+@media screen and (max-width: 1148px){
+    .intro__title {
+        min-width: 74.35%;
+    }   
+}
+
+@media screen and (max-width: 860px){
+    .intro__title {
+        width: 100%;
+     }
+}
+ 
+ @media screen and (max-width: 540px){
+    .intro__title {
+        width: 100%;
+    }
 }
