--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle{
     max-width: 320px;
-    font-size: 18;
+    font-size: 18px;
     font-weight: normal;
     line-height: 1.2;
     text-align: center;
