--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     z-index: 0;
     position: relative;
 }
@@ -21,11 +22,13 @@
  @media screen and (max-width: 860px){
      .cover {
          min-height: 480px;
+         margin-top: 89px;
      }
  }
  
  @media screen and (max-width: 540px){
      .cover{
          min-height: 200px;
+         margin-top: 64px;
      }
  }
