--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -22,9 +22,10 @@
  
 @media screen and (max-width: 540px){
     .footer {
-        max-width: 165px;
-        min-height: 198px;
-        margin: 64px 137px 24px 16px;
+        min-width: 165px;
+        margin-top: 64px;
+        margin-bottom: 24px;
+        margin-left: 16px;
         flex-direction: column;
     }
 }
