--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,4 +1,4 @@
-.header__nav-link {
+.header__lang-link {
     font-size: 24px;
     line-height: 1.2;
     font-weight: normal;
@@ -9,16 +9,16 @@
     transition: ease 0.5s;
 }
 
-.header__nav-link:hover{
+.header__lang-link:hover{
     opacity: 0.8;
 }
 
-.header__nav-link:active {
+.header__lang-link:active {
     text-decoration: underline;
 }
 
 @media screen and (max-width: 540px){
-    .header__nav-link{
+    .header__lang-link{
         font-size: 18px;
         line-height: 1.11;
     }
