--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,7 +9,11 @@
 @media screen and (max-width: 860px){
    .place__paragraph {
       font-size: 16px;
-      line-height: 1.63;
-      margin-bottom: 25px;
    }
+}
+
+@media screen and (max-width: 540px) {
+   .place__paragraph {
+      margin: 0 16px 25px;
+   }   
 }
