--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -17,9 +17,7 @@
 @media screen and (max-width: 540px){
     .place__title {
         font-size: 32px;
-        line-height: 1.09;
-        min-height: 35px;
         max-width: 288px;
-        margin: 0 0 30px;
+        margin: 0 16px 30px;
     }
 }
