--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -8,6 +8,6 @@
 
 @media screen and (max-width: 540px){
     .place__website {
-        margin-bottom: 30px;
+        margin: 0 16px 30px;
     }
 }
