--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -15,13 +15,13 @@
 @media screen and (max-width: 860px){
     .places {
         max-width: calc(100% - 48px);
-        margin: 88px auto 0;
+        margin-top: 88px;
     }
 }
  
 @media screen and (max-width: 540px){
     .places {
-        width: 100%;
-        margin: 64px auto 0;
+        max-width: 100%;
+        margin: 64px 0 0;
     }
 }
