--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -11,6 +11,10 @@
     position: relative;
 }
 
+.place:last-of-type {
+    margin-bottom: 0;
+}
+
 @media screen and (max-width: 1148px){
     .place {
       grid-gap: 48px 32px;
